--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Yoga classes online">
+    <meta name="keywords" content="yogaonline, yoga classes, bikram, yin, ashtanga">
+    <link rel="stylesheet" href="/assets/css/style.css">
+
+    <title>YogaOnline</title>
 </head>
 <body>
-    
+    Hello World!
 </body>
 </html>
