Add basic struucture to body

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,28 @@
 
     <title>YogaOnline</title>
 </head>
+
 <body>
-    Hello World!
+    <header>
+        <a href="index.html">
+            <h1>YOGAONLINE</h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Classes</a></li>
+            </ul>
+            <input type="button" value="SIGN IN">
+        </nav>
+        <section>
+            Hero Image <input type="button" value="START YOUR FREE TRIAL">
+        </section>
+
+        <section>Reviews</section>
+
+        <footer>Social media, mail, copyright</footer>
+    </header>
+    
 </body>
+
 </html>
