Add hero image and set margin and padding to 0 in css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <input type="button" value="SIGN IN">
         </nav>
         <section>
-            Hero Image <input type="button" value="START YOUR FREE TRIAL">
+            <div id="hero-image"></div>
+            
+            <input type="button" value="START YOUR FREE TRIAL">
         </section>
 
         <section>Reviews</section>
