--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>YOGAONLINE</h1>
+            <h1 id="logo">YOGAONLINE</h1>
         </a>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Classes</a></li>
             </ul>
-            <input type="button" value="SIGN IN">
+
+            <input id="signin-button" type="button" value="SIGN IN">
         </nav>
         <section>
             <div id="hero-image"></div>
