Add heading, style and position button

--- a/index.html
+++ b/index.html
@@ -26,15 +26,23 @@
         </nav>
         <section>
             <div id="hero-image"></div>
-            
-            <input type="button" value="START YOUR FREE TRIAL">
+
+            <div class="herotext">
+                <input type="button" id="trial-button" value="START YOUR FREE TRIAL">
+                <h2>MASTER YOGA!</h2>
+                <h3>Unlimited Yoga classes for 9.99€/month, 14 days free trial!</h3>
+            </div>
+
         </section>
 
-        <section>Reviews</section>
+        <section>Reviews
+
+
+        </section>
 
         <footer>Social media, mail, copyright</footer>
     </header>
-    
+
 </body>
 
 </html>
