Add content and style to reveiws section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,29 @@
 
         </section>
 
-        <section>Reviews
+        <section class="reviews">
+            <div>
+                <h2>Reviews</h2>
+                <h4>All reviews: 1923</h3>
+            </div>
+
+            <div id="r1">
+                <h3>Cathrin McDonough</h3>
+                <p>I started the Yin-yoga class as a beginner and I loved it from start to end! Now I'm on the advanced
+                    class in Yin and it's as fantastic as the beginner class. </p>
+            </div>
+            <div id="r2">
+                <h3>Marc Andersen</h3>
+                <p>I've practiced some yoga before and thought that I was quite skilled. But after the Ashtanga-class I
+                    relaized that I was at a beginner level, now I can safley say that I'm skilled! Thank you Lindy and
+                    Yogaonline!</p>
+            </div>
+            <div id="r3">
+                <h3>Rachel Doromot</h3>
+                <p>My sister gave me a class last christmas and I was a bit skeptical to do Yoga "Online". But i changed
+                    my mind, It's a huge asset to be able to practice at any time and from where you are on your phone
+                </p>
+            </div>
 
 
         </section>
